--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -3,11 +3,8 @@
 @tailwind utilities;
 
 @layer base {
-  html,
   body {
-    padding: 0;
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-      Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-family: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN',
+      'Hiragino Sans', Meiryo, sans-serif;
   }
 }
