--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    font-family: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN',
-      'Hiragino Sans', Meiryo, sans-serif;
+    font-family: 'Helvetica Neue', Arial, 'Hiragino Sans',
+      'Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
   }
 }
